--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,21 @@
 version: 2.1
 
 jobs:
-  build:
+  bobby:
     docker: 
       - image: cimg/ruby:3.4.6
     steps:
       - checkout
       - run: echo "Hello World"
+  sally:
+    docker:
+      - image: cimg/ruby:3.4.6
+    steps:
+      - checkout
+      - run: echo "Double trouble"
+  workflows:
+    version: 2
+    bobby_sally:
+      jobs:
+        - bobby
+        - sally
