--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,33 @@
 version: 2.1
 
 jobs:
-  bobby:
+  build:
     docker: 
-      - image: cimg/ruby:3.4.6
+      - image: cimg/node:20.12.0
     steps:
       - checkout
-      - run: echo "Hello World"
-  sally:
+      - run: echo "npm installing"
+      - run: npm install
+      - run: CI=true npm run build
+  test:
     docker:
-      - image: cimg/ruby:3.4.6
+      - image: cimg/node:20.12.0
     steps:
       - checkout
-      - run: echo "Double trouble"
+      - run: echo "testing stuff"
+      - run: npm test
+  hithere:
+    docker:
+      - image: cimg/node:20.12.0
+    steps:
+      - checkout
+      - run: echo "hello!"
 workflows:
   version: 2
-  bobby_sally:
+  build_test_and_lint:
     jobs:
-      - bobby
-      - sally
+      - build
+      - hithere
+      - test:
+        requires:
+          - hithere
