add missing npm install run for tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - checkout
       - run: echo "testing stuff"
+      - run: npm install
       - run: npm test
   hithere:
     docker:
