--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@cfaester/enzyme-adapter-react-18": "^0.8.0",
-    "prettier": "3.6.2"
+    "prettier": "3.6.2",
+    "simple-git-hooks": "^2.13.1"
   }
 }
